BUGFIX: gap de formulario

--- a/flaskr/static/adminStyles.css
+++ b/flaskr/static/adminStyles.css
@@ -660,6 +660,7 @@ pre code {
   #product_form{
     display: flex;
     flex-direction: row;
+    gap: 25px;
   }
 }
 @media (min-width: 1200px) {
